2003-06-24  Jeffrey Stedfast  <fejj@ximian.com>

	Might fix bug #45368 but I wouldn't bet on it.

	* message-browser.c (message_browser_new): Record the signal id
	for folder_loaded.
	(message_browser_folder_loaded): disconnect by id rather than
	searching for the handler. Save the id of the message_list_built
	signal handler.
	(message_browser_message_list_built): Disconnect the handler by
	id.
	(message_browser_destroy): Disconnect the signal handlers by id.

2003-06-20  Not Zed  <NotZed@Ximian.com>

	** See bug #43887

	* mail-format.c (mail_get_message_body): handle text/enriched and
	text/richtext explictly, and dont treat them as text/plain.

2003-06-23  Radek Doulik  <rodo@ximian.com>

	* mail-config.c (config_write_style): add
	EvolutionMailPrintHTMLWidget style assignment

	* mail-callbacks.c (do_mail_print): set printing widget name

2003-06-23  Dan Winship  <danw@ximian.com>

	* message-list.c (on_selection_changed_cmd): Save the idle_id

2003-06-23  Larry Ewing  <lewing@ximian.com>

	* folder-browser.c (do_message_selected): make sure not to strcmp
	a possibly NULL string.

2003-06-19  Not Zed  <NotZed@Ximian.com>

	** See bug #45063

	* folder-browser.c (do_message_selected): dont re-load if the same
	message gets selected again as one we've already shown.  Etree
	sends out selection changed events even when when it hasn't.

2003-06-18  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (hide_save_state): Only save state if we have a
	folder reference. Fixes some warnings about casting a NULL object
	to a CamelFolder.

2003-06-16  Jeffrey Stedfast  <fejj@ximian.com>

	* message-list.c (ml_tree_value_at): Don't display an unread icon
	for a parent message status if it has unread children but has been
	read itself. Instead, show that we have unread children by just
	making the message test bold (which it was already doing, so
	yay... this was easy). Fixes bug #42630.

2003-06-16  Not Zed  <NotZed@Ximian.com>

	** See bug #44609
